assignment/style.css
body {
    background-image: url("record.png");
    background-color: white;
    background-repeat: repeat;
    margin: 0;
}

.banner {
    background-color: darkcyan;
    color: lightcoral;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.content {
    background-color: lightgray;
    padding: 1em;
}

